# mojang-rs

./: Cargo.toml  README.md  todo.md
.github/workflows/: rust.yml
src/: common.rs  error.rs  lib.rs  mojang_error.rs  player.rs  server_block.rs  stats.rs
src/api/: blocked_servers.rs  mod.rs  profile.rs  public_profile.rs  username.rs
tests/: test.rs
