[package]
name = "mojang"
authors = ["Connor Slade <connor@connorcode.com>"]
repository = "https://github.com/Basicprogrammer10/Rust-Mojang"
documentation = "https://docs.rs/mojang"
version = "0.0.0"
edition = "2021"

description = "🕹️ Interface for the Mojang API"
keywords = ["API", "Minecraft", "Mojang"]
categories = ["api-bindings", "games", "network-programming"]
license = "GPL-3.0"
readme = "README.md"

[dependencies]
ureq = "2.3.0"
tinyjson = "2.3.0"
