[package]
name = "mojang"
authors = ["Connor Slade <connor@connorcode.com>"]
repository = "https://github.com/Basicprogrammer10/Rust-Mojang"
documentation = "https://docs.rs/mojang"
version = "0.1.0"
edition = "2021"

description = "🕹️ Interface for the Mojang API"
keywords = ["API", "Minecraft", "Mojang"]
categories = ["api-bindings", "games", "network-programming"]
license = "GPL-3.0"
readme = "README.md"

[dependencies]
ureq = { version = "2.3.0", features = ["json"] }
sha-1 = "0.9.8"
base64 = "0.13.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["serde"] }
urlencoding = "2.1.2"

[features]
timeout = []
